fix : card position + gap

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -11918,8 +11918,8 @@ textarea.form-control-lg {
 }
 
 .rowRecipe {
-  justify-content: space-between;
-  gap: 24px;
+  justify-content: start;
+  gap: 50px;
 }
 
 .recipe {
