--- a/assets/styles/scss/components/recipe.scss
+++ b/assets/styles/scss/components/recipe.scss
@@ -1,7 +1,7 @@
 // ********** Recipe **********
 .rowRecipe {
-  justify-content: space-between;
-  gap: 24px;
+  justify-content: start;
+  gap: 50px;
 }
 
 .recipe {
